cambios del cors para que funcione el bot de despertar el servidor